--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,24 @@
 /***** BASE STYLES *****/
+html {
+  font-size: 16px;
+}
+
 body{
 font-family: 'Roboto Slab', serif;
+}
+
+/***** GRID *****/
+.full-width {
+  width: 90%;
+  margin: 0 auto;
+}
+
+
+.third-width {
+  width: 400px;
+  float: left;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .projects{
@@ -16,43 +34,19 @@ font-family: 'Roboto Slab', serif;
 
 }
 
-/***** GRID *****/
-.full-width {
-  width: 1200px;
-  margin: 0 auto;
-}
-
-
-.third-width {
-  width: 400px;
-  float: left;
-  margin: 0 auto;
-  text-align: center;
-}
-
-header{
-  min-height: 800px;
-  background: url('../img/hero-image.png');
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
-}
-
-header h1{
+.hero-area h1{
   color: #000000;
   font-family: 'Roboto Slab', serif;
-  font-size: 55px;
+  font-size: 3.4375em;
   padding-top: 200px;
   padding-left: 50px;
   margin: 0;
 }
 
-header h2{
+.hero-area h2{
   color: #4d4d4d;
   font-family: 'Roboto', sans-serif;
-  font-size: 38px;
+  font-size: 2.375em;
   padding-left: 80px;
 }
 
@@ -65,14 +59,14 @@ header h2{
   color:  #4d4d4d;
   text-align: center;
   /*****padding-left:610px;*****/
-  font-size: 36px;
+  font-size: 2.25em;
 }
 
 #project-one, #project-two, #project-three{
   height: 360px;
   padding:50px 0 100px 0;
   color: #4d4d4d;
-  font-size: 24px;
+  font-size: 1.5em;
 }
 
 
@@ -92,7 +86,7 @@ header h2{
 }
 
 .about p{
-  font-size: 24px;
+  font-size: 1.5em;
   padding-left: 540px;
 }
 
@@ -105,7 +99,7 @@ header h2{
 }
 
 .contact-info h3{
-  font-size: 36px;
+  font-size: 2.25em;
   padding-left: 490px;
   padding-top: 50px;
   padding-bottom:  50px;
@@ -140,4 +134,34 @@ footer {
 
 footer h6{
   margin: 0;
+}
+
+
+/***** MOBILE STYLES - HOMEPAGE *****/
+/***** HERO AREA *****/
+
+.hero-area{
+  min-height: 800px;
+  background: url('../img/hero-image.png');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+.hero-area h1{
+  color: #000000;
+  font-family: 'Roboto Slab', serif;
+  font-size: 3.4375em;
+  padding-top: 200px;
+  padding-left: 50px;
+  margin: 0;
+}
+
+.hero-area h2{
+  color: #4d4d4d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 2.375em;
+  padding-left: 80px;
 }
