--- a/css/main.css
+++ b/css/main.css
@@ -1,194 +1,485 @@
-/*****--------------- BASE STYLES ---------------*****/
+/*! HTML5 Boilerplate v7.3.0 | MIT License | https://html5boilerplate.com/ */
+
+/* main.css 2.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
+/*
+ * What follows is the result of much research on cross-browser styling.
+ * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
+ * Kroc Camen, and the H5BP dev community and team.
+ */
+
+/* ==========================================================================
+   Base styles: opinionated defaults
+   ========================================================================== */
+
 html {
-  font-size: 16px;
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4;
 }
 
-body{
-font-family: 'Roboto Slab', serif;
+/*
+ * Remove text-shadow in selection highlight:
+ * https://twitter.com/miketaylr/status/12228805301
+ *
+ * Vendor-prefixed and regular ::selection selectors cannot be combined:
+ * https://stackoverflow.com/a/16982510/7133471
+ *
+ * Customize the background color to match your design.
+ */
+
+::-moz-selection {
+  background: #b3d4fc;
+  text-shadow: none;
 }
 
-ul,
-ol {
-  list-style-type: none;
+::selection {
+  background: #b3d4fc;
+  text-shadow: none;
 }
 
-a {
-  color: white;
+/*
+ * A better looking default horizontal rule
+ */
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
 }
 
-/*****--------------- BASE HEADER - FOOTER STYLES ---------------*****/
+/*
+ * Remove the gap between audio, canvas, iframes,
+ * images, videos and the bottom of their containers:
+ * https://github.com/h5bp/html5-boilerplate/issues/440
+ */
 
-header,
-footer {
-  background-color: #DF8480;
-  padding: 15px 0;
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+  vertical-align: middle;
 }
 
-header nav {
-  font-size: 1.125em;
-  font-weight: 700;
-  text-transform: uppercase;
-}
+/*
+ * Remove default fieldset styles.
+ */
 
-ul {
-  display: flex;
-  justify-content: space-between;
-  width:20%;
-  padding-left: 75%;
+fieldset {
+  border: 0;
   margin: 0;
+  padding: 0;
 }
 
-footer {
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
+/*
+ * Allow only vertical resizing of textareas.
+ */
+
+textarea {
+  resize: vertical;
 }
 
-footer h6{
+/* ==========================================================================
+   Browser Upgrade Prompt
+   ========================================================================== */
+
+.browserupgrade {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
+}
+
+/* ==========================================================================
+   Author's custom styles
+   ========================================================================== */
+
+   /*****--------------- BASE STYLES ---------------*****/
+   html {
+     font-size: 16px;
+   }
+
+   body{
+   font-family: 'Roboto Slab', serif;
+   }
+
+   ul,
+   ol {
+     list-style-type: none;
+   }
+
+   a {
+     color: white;
+   }
+
+   img {
+     width: 100%;
+   }
+
+   .content-wrapper {
+     width: 90%;
+     margin: 50px 0;
+   }
+
+   /*****--------------- BASE HEADER - FOOTER STYLES ---------------*****/
+
+   header,
+   footer {
+     background-color: #DF8480;
+     padding: 15px 0;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-flow: row wrap;
+   }
+
+   header nav {
+     font-size: 1.125em;
+     font-weight: 700;
+     text-transform: uppercase;
+     display: flex;
+     justify-content: space-around;
+     align-items: center;
+     flex-flow: row wrap;
+   }
+
+   ul {
+     width: 100%;
+     display: flex;
+     justify-content: space-around;
+     padding-left: 0;
+     margin: 0;
+   }
+
+   footer {
+     color: #ffffff;
+     display: flex;
+     justify-content: center;
+   }
+
+   footer h6{
+     margin: 0;
+   }
+
+   /***** GRID *****/
+   /*.full-width {
+     width: 90%;
+     margin: 0 auto;
+   }
+
+   .third-width {
+     width: 400px;
+     float: left;
+     margin: 0 auto;
+     text-align: center;
+   }
+
+   .projects{
+     height: 1450px;
+   }
+
+   .about{
+     height: 650px;
+   }
+
+   .contact-info {
+     height: 450px;
+
+   }
+
+   .hero-area h1{
+     color: #000000;
+     font-family: 'Roboto Slab', serif;
+     font-size: 3.4375em;
+     padding-top: 200px;
+     padding-left: 50px;
+     margin: 0;
+   }
+
+   .hero-area h2{
+     color: #4d4d4d;
+     font-family: 'Roboto', sans-serif;
+     font-size: 2.375em;
+     padding-left: 80px;
+   }*/
+
+
+
+   .about, .contact-info, footer{
+     clear: both;
+   }
+
+   .about{
+     background-color: #606E47;
+     color: #ffffff;
+   }
+
+   .about h3{
+     font-size: 36px;
+     padding-top: 50px;
+   }
+
+   .about p{
+     font-size: 1.5em;
+   }
+
+   .contact-info {
+     background-color: #DF8480;
+   }
+
+   .contact-info {
+     color: #ffffff;
+   }
+
+   .contact-info h3{
+     font-size: 2.25em;
+     margin: 0;
+
+   }
+
+   nav ul li{
+     display: inline-block;
+   }
+
+   nav ul li a{
+     text-decoration: none;
+   }
+
+   nav ul li a img {
+     padding: 0px 35px 35px 0;
+   }
+
+   .about, .contact-info, footer{
+     clear: both;
+   }
+
+
+
+   /*****--------------- MOBILE STYLES - HOMEPAGE ---------------*****/
+
+   /***** HERO AREA *****/
+
+   .hero-area{
+     min-height: 800px;
+     width: 100%;
+     background: url('../img/hero-image.png');
+     background-size: cover;
+     background-position: center;
+     display: flex;
+     justify-content: center;
+     flex-flow: row wrap;
+   }
+
+   .hero-area h1{
+     color: #000000;
+     font-family: 'Roboto Slab', serif;
+     font-size: 3.1em;
+     margin: 0;
+     text-align: center;
+   }
+
+   .hero-area h2{
+     color: #4d4d4d;
+     font-family: 'Roboto', sans-serif;
+     font-size: 2em;
+     text-align: center;
+   }
+
+   /***** PROJECTS *****/
+   .projects {
+   display: flex;
+   justify-content: center;
+   flex-flow: row wrap;
+   }
+
+   .projects h3 {
+     font-size: 2em;
+     margin: 10px 0;
+   }
+
+   .projects img {
+     padding: 0;
+   }
+
+   .projects article {
+     width: 63%;
+     margin: 30px 0;
+   }
+
+   .projects .project-items {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-flow: row wrap;
+   }
+
+   .projects p {
+     text-align: center;
+     margin: 0;
+   }
+
+/* ==========================================================================
+   Helper classes
+   ========================================================================== */
+
+/*
+ * Hide visually and from screen readers
+ */
+
+.hidden {
+  display: none !important;
+}
+
+/*
+* Hide only visually, but have it available for screen readers:
+* https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+*
+* 1. For long content, line feeds are not interpreted as spaces and small width
+*    causes content to wrap 1 word per line:
+*    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
+*/
+
+.sr-only {
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  /* 1 */
+}
+
+/*
+* Extends the .sr-only class to allow the element
+* to be focusable when navigated to via the keyboard:
+* https://www.drupal.org/node/897638
+*/
+
+.sr-only.focusable:active,
+.sr-only.focusable:focus {
+  clip: auto;
+  height: auto;
   margin: 0;
+  overflow: visible;
+  position: static;
+  white-space: inherit;
+  width: auto;
 }
 
-/***** GRID *****/
-/*.full-width {
-  width: 90%;
-  margin: 0 auto;
+/*
+* Hide visually and from screen readers, but maintain layout
+*/
+
+.invisible {
+  visibility: hidden;
 }
 
-.third-width {
-  width: 400px;
-  float: left;
-  margin: 0 auto;
-  text-align: center;
+/*
+* Clearfix: contain floats
+*
+* For modern browsers
+* 1. The space content is one way to avoid an Opera bug when the
+*    `contenteditable` attribute is included anywhere else in the document.
+*    Otherwise it causes space to appear at the top and bottom of elements
+*    that receive the `clearfix` class.
+* 2. The use of `table` rather than `block` is only necessary if using
+*    `:before` to contain the top-margins of child elements.
+*/
+
+.clearfix:before,
+.clearfix:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
 }
 
-.projects{
-  height: 1450px;
-}
-
-.about{
-  height: 650px;
-}
-
-.contact-info {
-  height: 450px;
-
-}
-
-.hero-area h1{
-  color: #000000;
-  font-family: 'Roboto Slab', serif;
-  font-size: 3.4375em;
-  padding-top: 200px;
-  padding-left: 50px;
-  margin: 0;
-}
-
-.hero-area h2{
-  color: #4d4d4d;
-  font-family: 'Roboto', sans-serif;
-  font-size: 2.375em;
-  padding-left: 80px;
-}*/
-
-.imgs{
-  padding: 0 50px 50px 50px;
-  float: left;
-}
-
-.projects h3{
-  color:  #4d4d4d;
-  text-align: center;
-  font-size: 2.25em;
-}
-
-#project-one, #project-two, #project-three{
-  height: 360px;
-  padding:50px 0 100px 0;
-  color: #4d4d4d;
-  font-size: 1.5em;
-}
-
-
-.about, .contact-info, footer{
+.clearfix:after {
   clear: both;
 }
 
-.about{
-  background-color: #606E47;
-  color: #ffffff;
-}
+/* ==========================================================================
+   EXAMPLE Media Queries for Responsive Design.
+   These examples override the primary ('mobile first') styles.
+   Modify as content requires.
+   ========================================================================== */
 
-.about h3{
-  padding-left: 500px;
-  font-size: 36px;
-  padding-top: 50px;
-}
+   @media only screen and (min-width: 768px) {
+     /* Tablet styles here */
+   }
 
-.about p{
-  font-size: 1.5em;
-  padding-left: 540px;
-}
+   @media only screen and (min-width: 1200px) {
+     /* Desktop styles here */
+   }
 
-.contact-info {
-  background-color: #DF8480;
-}
+/* ==========================================================================
+   Print styles.
+   Inlined to avoid the additional HTTP request:
+   https://www.phpied.com/delay-loading-your-print-css/
+   ========================================================================== */
 
-.contact-info {
-  color: #ffffff;
-}
-
-.contact-info h3{
-  font-size: 2.25em;
-  padding-left: 490px;
-  padding-top: 50px;
-  padding-bottom:  50px;
-  margin: 0;
-
-}
-
-nav ul li{
-  display: inline-block;
-}
-
-nav ul li a{
-  text-decoration: none;
-}
-
-nav ul li a img {
-  padding: 0px 35px 35px 0;
-}
-
-.about, .contact-info, footer{
-  clear: both;
-}
-
-
-
-/*****--------------- MOBILE STYLES - HOMEPAGE ---------------*****/
-
-/***** HERO AREA *****/
-
-.hero-area{
-  min-height: 800px;
-  background: url('../img/hero-image.png');
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  flex-flow: row wrap;
-}
-
-.hero-area h1{
-  color: #000000;
-  font-family: 'Roboto Slab', serif;
-  font-size: 3.4375em;
-  padding-top: 30%;
-  padding-left: 20%;
-  margin: 0;
-}
-
-.hero-area h2{
-  color: #4d4d4d;
-  font-family: 'Roboto', sans-serif;
-  font-size: 2.375em;
-  padding-left: 20%;
+@media print {
+  *,
+  *:before,
+  *:after {
+    background: transparent !important;
+    color: #000 !important;
+    /* Black prints faster */
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
+  a[href]:after {
+    content: " (" attr(href) ")";
+  }
+  abbr[title]:after {
+    content: " (" attr(title) ")";
+  }
+  /*
+     * Don't show links that are fragment identifiers,
+     * or use the `javascript:` pseudo protocol
+     */
+  a[href^="#"]:after,
+  a[href^="javascript:"]:after {
+    content: "";
+  }
+  pre {
+    white-space: pre-wrap !important;
+  }
+  pre,
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid;
+  }
+  /*
+     * Printing Tables:
+     * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
+     */
+  thead {
+    display: table-header-group;
+  }
+  tr,
+  img {
+    page-break-inside: avoid;
+  }
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
 }
