--- a/css/main.css
+++ b/css/main.css
@@ -165,81 +165,7 @@ textarea {
      margin: 0;
    }
 
-   /***** GRID *****/
-   /*.full-width {
-     width: 90%;
-     margin: 0 auto;
-   }
 
-   .third-width {
-     width: 400px;
-     float: left;
-     margin: 0 auto;
-     text-align: center;
-   }
-
-   .projects{
-     height: 1450px;
-   }
-
-   .about{
-     height: 650px;
-   }
-
-   .contact-info {
-     height: 450px;
-
-   }
-
-   .hero-area h1{
-     color: #000000;
-     font-family: 'Roboto Slab', serif;
-     font-size: 3.4375em;
-     padding-top: 200px;
-     padding-left: 50px;
-     margin: 0;
-   }
-
-   .hero-area h2{
-     color: #4d4d4d;
-     font-family: 'Roboto', sans-serif;
-     font-size: 2.375em;
-     padding-left: 80px;
-   }*/
-
-
-
-   .about, .contact-info, footer{
-     clear: both;
-   }
-
-   .about{
-     background-color: #606E47;
-     color: #ffffff;
-   }
-
-   .about h3{
-     font-size: 36px;
-     padding-top: 50px;
-   }
-
-   .about p{
-     font-size: 1.5em;
-   }
-
-   .contact-info {
-     background-color: #DF8480;
-   }
-
-   .contact-info {
-     color: #ffffff;
-   }
-
-   .contact-info h3{
-     font-size: 2.25em;
-     margin: 0;
-
-   }
 
    nav ul li{
      display: inline-block;
@@ -253,9 +179,6 @@ textarea {
      padding: 0px 35px 35px 0;
    }
 
-   .about, .contact-info, footer{
-     clear: both;
-   }
 
 
 
@@ -299,13 +222,18 @@ textarea {
    .projects h3 {
      font-size: 2em;
      margin: 10px 0;
+     text-align: center;
+   }
+
+   .projects h4 {
+     font-size: 1.25em;
    }
 
    .projects img {
-     padding: 0;
+     padding: 10px;
    }
 
-   .projects article {
+   .projects .project-items article {
      width: 63%;
      margin: 30px 0;
    }
@@ -317,9 +245,56 @@ textarea {
      flex-flow: row wrap;
    }
 
-   .projects p {
+   .projects h4, p{
      text-align: center;
      margin: 0;
+   }
+
+   /***** ABOUT ME *****/
+   .about{
+     background-color: #606E47;
+     color: #ffffff;
+     display: flex;
+     justify-content: center;
+     flex-flow: row wrap;
+     text-align: center;
+   }
+
+   .about h3{
+     font-size: 2.25em;
+   }
+
+   .about p{
+     font-size: 1em;
+   }
+
+   /***** CONTACT SECTION *****/
+
+   .contact-info {
+     background-color: #DF8480;
+     color: #ffffff;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-flow: row wrap;
+     text-align: center;
+   }
+
+   .contact-info h3{
+     font-size: 2.25em;
+     margin: 0;
+   }
+
+   nav ul li{
+     display: inline-block;
+   }
+
+   nav ul li a{
+     text-decoration: none;
+   }
+
+   nav ul li a img {
+     padding: 0px 35px 35px 0;
    }
 
 /* ==========================================================================
