--- a/css/main.css
+++ b/css/main.css
@@ -165,23 +165,6 @@ textarea {
      margin: 0;
    }
 
-
-
-   nav ul li{
-     display: inline-block;
-   }
-
-   nav ul li a{
-     text-decoration: none;
-   }
-
-   nav ul li a img {
-     padding: 0px 35px 35px 0;
-   }
-
-
-
-
    /*****--------------- MOBILE STYLES - HOMEPAGE ---------------*****/
 
    /***** HERO AREA *****/
@@ -388,10 +371,52 @@ textarea {
 
    @media only screen and (min-width: 768px) {
      /* Tablet styles here */
+
+     /* General Styles */
+     .content-wrapper {
+       max-width: 640px;
+       margin: 100px 0;
+     }
+
    }
 
    @media only screen and (min-width: 1200px) {
      /* Desktop styles here */
+
+
+    /* General Styles */
+      .content-wrapper {
+        max-width: 960px;
+       }
+
+       /***** ABOUT ME *****/
+
+       .about article {
+         display: flex;
+         justify-content: space-between;
+         text-align: center;
+       }
+
+       .about h3 {
+         font-size: 2.25em;
+         margin-bottom: 10px;
+       }
+
+       .about article figure,
+       .about article div {
+         width: 49%;
+       }
+
+       .about h4 {
+         padding-top: 100px;
+         font-size: 2em;
+         margin: 0
+       }
+       .about p {
+         font-size: 1.25em;
+       }
+
+
    }
 
 /* ==========================================================================
