--- a/css/main.css
+++ b/css/main.css
@@ -252,6 +252,10 @@ textarea {
      font-size: 1em;
      padding: 5px 0;
    }
+   .about a{
+       text-decoration: underline;
+
+   }
 
    /***** CONTACT SECTION *****/
 
