--- a/css/main.css
+++ b/css/main.css
@@ -133,27 +133,12 @@ textarea {
      background-color: #DF8480;
      padding: 0;
      display: flex;
-     justify-content: center;
-     align-items: center;
-     flex-flow: row wrap;
    }
 
    header nav {
-     font-size: 1.125em;
+     font-size: 1.75em;
      font-weight: 700;
      text-transform: uppercase;
-     display: flex;
-     justify-content: space-around;
-     align-items: center;
-     flex-flow: row wrap;
-   }
-
-   ul {
-     width: 100%;
-     display: flex;
-     justify-content: space-between;
-     padding-left: 0;
-     margin: 0;
    }
 
    footer {
@@ -168,6 +153,28 @@ textarea {
 
 
    /*****--------------- MOBILE STYLES - HOMEPAGE ---------------*****/
+
+   /***** HEADER ******/
+   /*header {
+     justify-content: center;
+     border: 5px solid black;
+   }
+
+   nav ul {
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     padding-left: 0;
+     margin: 0;
+   }
+
+   nav ul li {
+     text-align: center;
+   }*/
+
+   header nav {
+     text-align: center;
+   }
 
    /***** HERO AREA *****/
 
@@ -441,6 +448,23 @@ textarea {
       .content-wrapper {
         max-width: 960px;
        }
+      /*****HEADER STYLES *****/
+      header{
+        justify-content: space-around;
+      }
+
+      nav ul {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        padding-left: 0;
+        margin: 0;
+      }
+
+      nav ul li {
+        text-align: center;
+      }
+
 
     /***** HERO AREA *****/
     .hero-area h1, .hero-area h2 {
