--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,10 @@ textarea {
      text-decoration: none;
    }
 
+   a:hover {
+     background-color: #d9d9d9;
+   }
+
    img {
      width: 100%;
    }
@@ -136,7 +140,7 @@ textarea {
    }
 
    header nav {
-     font-size: 1.75em;
+     font-size: 2em;
      font-weight: 700;
      text-transform: uppercase;
    }
