--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,11 @@ textarea {
      text-transform: uppercase;
    }
 
+   header nav a:hover {
+     box-shadow: 0 0 0 5px #ffffff;
+     transition: .5 ease;
+}
+
    footer {
      color: #ffffff;
      display: flex;
